--- a/Angular-Rxjs/src/app/app.component.html
+++ b/Angular-Rxjs/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Home</h1>
+<button (click)="concatAll()">Concat all</button
+><button (click)="exhaustAll()">exhaust all</button
+><button (click)="mergeAll()">merge all</button
+><button (click)="switchAll()">switch all</button
+><button (click)="withLatestFrom()">with latest from</button>
