--- a/Angular-Rxjs/src/app/app.component.html
+++ b/Angular-Rxjs/src/app/app.component.html
@@ -1,1 +1,18 @@
-<h1>Home</h1>
+<div class="row mt-5">
+    <div class="col-6 text-center">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <button class="btn btn-lg btn-primary" (click)="getObservableData()">Get Observable Data</button>
+            </div>
+            <div class="col-12 mt-3 data">{{observableData}}</div>
+        </div>
+    </div>
+    <div class="col-6 text-center">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <button class="btn btn-lg btn-primary" (click)="getSubjectData()">Get Subject Data</button>
+            </div>
+            <div class="col-12 mt-3 data">{{subjectData}}</div>
+        </div>
+    </div>
+</div>
