--- a/Angular-Rxjs/src/app/app.component.html
+++ b/Angular-Rxjs/src/app/app.component.html
@@ -1,16 +1,8 @@
 <div class="main-wrap d-flex flex-column  justify-content-center">
-    <!-- Partition -->
-    <!-- <div class="text-center mb-5">
-        <h2>Partition (Rxjs)</h2>
-        <div class=" w-50 d-flex m-auto g-5">
-            <input type="number" class="form-control m-auto" #inpt/>
-            <button type="submit" class="btn btn-primary ml-2" (click)="onChange(inpt)">Submit</button>
-        </div>
-    </div> -->
-
+    
     <!-- CombineLatestWith -->
-    <!-- <div class="text-center mb-5">
-        <h2>Partition (Rxjs)</h2>
+    <div class="text-center mb-5">
+        <h2>combineLatestWith (Rxjs)</h2>
         <div class=" w-50 d-flex m-auto g-5">
             <label> Observable 1:</label>
             <input type="text" class="form-control m-auto" #inpt/>
@@ -21,11 +13,11 @@
             <input type="text" class="form-control m-auto" #inpt2/>
             <button type="submit" class="btn btn-primary ml-2" (click)="onChange2(inpt2)">Submit</button>
         </div>
-    </div> -->
+    </div>
 
     <!-- forkJoin & Concat & Race-->
-    <div class="text-center mb-5">
-        <h2>Partition (Rxjs)</h2>
+    <!-- <div class="text-center mb-5">
+        <h2>forkJoin (Rxjs)</h2>
         <div class=" w-50 d-flex m-auto g-5">
             <label> Observable 1:</label>
             <input type="text" class="form-control m-auto" #inpt/>
@@ -38,7 +30,19 @@
             <button type="submit" class="btn btn-primary ml-2" (click)="onChange2(inpt2)">Submit</button>
             <button type="submit" class="btn btn-danger ml-2" (click)="onComplete2()" *ngIf="showCompletBtn">Complete</button>
         </div>
-    </div>
+    </div> -->
+
+    <!-- Partition -->
+    <!-- <div class="text-center mb-5">
+        <h2>partition (Rxjs)</h2>
+        <div class=" w-50 d-flex m-auto g-5">
+            <input type="number" class="form-control m-auto" #inpt/>
+            <button type="submit" class="btn btn-primary ml-2" (click)="onChange(inpt)">Submit</button>
+        </div>
+    </div> -->
+
+    <!-- ================================================================================================================================ -->
+    
     <div class="row mt-5" *ngIf="showChild; else cardTemplate">
         <div class="col-6 text-center">
             <app-component-a [displayList]="componentAList" [title]="titleA"></app-component-a>
