--- a/Angular-Rxjs/src/app/app.component.html
+++ b/Angular-Rxjs/src/app/app.component.html
@@ -1,1 +1,21 @@
-<h1>Home</h1>
+<nav>
+  <ul>
+    <li>
+      <a
+        routerLink="/first"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >First Component</a
+      >
+    </li>
+    <li>
+      <a
+        routerLink="/second"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Second Component</a
+      >
+    </li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
